--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-failures.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-failures.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>CucumberTestNG022023</td>
         <td>1</td>
-      <td>16 Oct 2023, 20:41</td>
+      <td>17 Oct 2023, 22:27</td>
     </tr>
   </tbody>
 </table>
@@ -127,7 +127,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">4.249</span>
+  <span class="lead-duration duration">4.234</span>
 
 
   <span data-toggle="collapse" class=" collapsable-control" data-target="#element-1">
@@ -293,7 +293,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user input name is <span class="argument">&quot;THIS STRING IS 256 CHARACTERS xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx&quot;</span></span>
 
-  <span class="lead-duration duration">1.110</span>
+  <span class="lead-duration duration">1.093</span>
 
 </div>
 
@@ -384,7 +384,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click submit button</span>
 
-  <span class="lead-duration duration">2.055</span>
+  <span class="lead-duration duration">2.039</span>
 
 </div>
 
@@ -475,7 +475,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error name message bellow textbox name <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n h&#7885; v&agrave; t&ecirc;n t&#7889;i &#273;a 255 k&yacute; t&#7921;&quot;</span></span>
 
-  <span class="lead-duration duration">1.083</span>
+  <span class="lead-duration duration">1.101</span>
 
 </div>
 
@@ -527,9 +527,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.12.1', revision: '8e34639b11'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '15.0.2'
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [75215899-0158-4a27-8efb-951cda36aebf, findElement {using=id, value=errorNameMessage}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:36601, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 9156, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:36601/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: 75215899-0158-4a27-8efb-951cda36aebf
+Command: [31973d10-4065-41ec-a96b-b68d37026dc9, findElement {using=id, value=errorNameMessage}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:46327, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 16812, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:46327/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Session ID: 31973d10-4065-41ec-a96b-b68d37026dc9
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:64)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -624,7 +624,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.227</span>
+  <span class="lead-duration duration">1.102</span>
 
           </div>
 
@@ -645,7 +645,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_3_4196646110.html">Register</a>
+      <a href="report-feature_5_4196646110.html">Register</a>
     </div>
 
 
@@ -655,7 +655,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
 </div>
 
 
-  <span class="lead-duration duration">8.123</span>
+  <span class="lead-duration duration">8.094</span>
 
 
   <span data-toggle="collapse" class=" collapsable-control" data-target="#element-14">
@@ -730,7 +730,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">5.934</span>
+  <span class="lead-duration duration">5.867</span>
 
 </div>
 
@@ -821,7 +821,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.140</span>
+  <span class="lead-duration duration">0.126</span>
 
 </div>
 
@@ -912,7 +912,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.030</span>
+  <span class="lead-duration duration">2.061</span>
 
 </div>
 
@@ -981,7 +981,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -1003,7 +1003,7 @@ Session ID: 75215899-0158-4a27-8efb-951cda36aebf
   <span class="keyword indention">Then</span>
   <span class="name">user should see an success message <span class="argument">&quot;&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
-  <span class="lead-duration duration">0.017</span>
+  <span class="lead-duration duration">0.038</span>
 
 </div>
 
@@ -1055,9 +1055,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.12.1', revision: '8e34639b11'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '15.0.2'
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [f4ef4498-2032-41e9-b6ca-be10c5540495, findElement {using=xpath, value=//span[contains(text(),'&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !')]}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:31046, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 17032, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:31046/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: f4ef4498-2032-41e9-b6ca-be10c5540495
+Command: [a16af942-c26d-4d55-9d5e-68b0eda7ef83, findElement {using=xpath, value=//span[contains(text(),'&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !')]}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:8728, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 2228, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:8728/devtool..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Session ID: a16af942-c26d-4d55-9d5e-68b0eda7ef83
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:64)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -1112,7 +1112,7 @@ Session ID: f4ef4498-2032-41e9-b6ca-be10c5540495
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -1152,7 +1152,7 @@ Session ID: f4ef4498-2032-41e9-b6ca-be10c5540495
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.025</span>
+  <span class="lead-duration duration">1.138</span>
 
           </div>
 
