--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
@@ -41,161 +41,17 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Features Overview</title>
+<title>Cucumber Reports (no 1) - Error Page</title>
 
 
-  <script>
-$(document).ready(function() {
-
-    var chartData = {
-        datasets: [{
-            data: [
-                123,
-                2,
-                0,
-                0,
-                0
-            ],
-            backgroundColor: [
-                "#00B000",
-                "#FF3030",
-                "#88AAFF",
-                "#F5F28F",
-                "#F5B975"
-            ]
-        }],
-        labels: [
-            "Passed",
-            "Failed",
-            "Skipped",
-            "Pending",
-            "Undefined"
-        ]
-    };
-
-    var context = document.getElementById("steps-chart");
-    window.myBar = new Chart(context, {
-        type: "doughnut",
-        data: chartData,
-        options: {
-            title: {
-                display: true,
-                fontSize: 20,
-                text: "Steps"
-            },
-            responsive: true,
-            legend: {
-                display: false
-            },
-            tooltips: {
-                callbacks: {
-                    label: function(tooltipItem, data) {
-                        var allData = data.datasets[tooltipItem.datasetIndex].data;
-                        var tooltipLabel = data.labels[tooltipItem.index];
-                        var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 125) / 100;
-                        return tooltipLabel + ": " + tooltipData + " (" + tooltipPercentage + "%)";
-                    }
-                }
-            }
-        }
-    });
-
-});$(document).ready(function() {
-
-    var chartData = {
-        datasets: [{
-            data: [
-                19,
-                2
-            ],
-            backgroundColor: [
-                "#00B000",
-                "#FF3030"
-            ]
-        }],
-        labels: [
-            "Passed",
-            "Failed"
-        ]
-    };
-
-    var context = document.getElementById("scenarios-chart");
-    window.myBar = new Chart(context, {
-        type: "doughnut",
-        data: chartData,
-        options: {
-            title: {
-                display: true,
-                fontSize: 20,
-                text: "Scenarios"
-            },
-            responsive: true,
-            legend: {
-                display: false
-            },
-            tooltips: {
-                callbacks: {
-                    label: function(tooltipItem, data) {
-                        var allData = data.datasets[tooltipItem.datasetIndex].data;
-                        var tooltipLabel = data.labels[tooltipItem.index];
-                        var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 21) / 100;
-                        return tooltipLabel + ": " + tooltipData + " (" + tooltipPercentage + "%)";
-                    }
-                }
-            }
-        }
-    });
-
-});$(document).ready(function() {
-
-    var chartData = {
-        datasets: [{
-            data: [
-                   3,
-                   2
-               ],
-               backgroundColor: [
-                "#00B000",
-                "#FF3030"
-            ]
-        }],
-        labels: [
-            "Passed",
-            "Failed"
-        ]
-    };
-
-    var context = document.getElementById("features-chart");
-    window.myBar = new Chart(context, {
-        type: "doughnut",
-        data: chartData,
-        options: {
-            title: {
-                display: true,
-                fontSize: 20,
-                text: "Features"
-            },
-            responsive: true,
-            legend: {
-                display: false
-            },
-            tooltips: {
-                callbacks: {
-                    label: function(tooltipItem, data) {
-                        var allData = data.datasets[tooltipItem.datasetIndex].data;
-                        var tooltipLabel = data.labels[tooltipItem.index];
-                        var tooltipData = allData[tooltipItem.index];
-                        var tooltipPercentage = Math.round(10000 * tooltipData / 5) / 100;
-                        return tooltipLabel + ": " + tooltipData + " (" + tooltipPercentage + "%)";
-                    }
-                }
-            }
-        }
-    });
-
-});  </script>
+  <style>
+  .error-message {
+    color:red;
+    font-weight: bold;
+    background-color: lightpink;
+    font-family: monospace;
+  }
+  </style>
 </head>
 
 <body>
@@ -205,7 +61,7 @@ $(document).ready(function() {
     <div class="collapse navbar-collapse">
       <p class="navbar-text navbar-left">Cucumber Report</p>
       <ul class="nav navbar-nav navbar-right">
-        <li role="presentation"  class="active" ><a href="overview-features.html">Features</a></li>
+        <li role="presentation" ><a href="overview-features.html">Features</a></li>
         <li role="presentation" ><a href="overview-tags.html">Tags</a></li>
         <li role="presentation" ><a href="overview-steps.html">Steps</a></li>
         <li role="presentation" ><a href="overview-failures.html">Failures</a></li>
@@ -230,7 +86,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>CucumberTestNG022023</td>
         <td>1</td>
-      <td>16 Oct 2023, 20:41</td>
+      <td>17 Oct 2023, 23:00</td>
     </tr>
   </tbody>
 </table>
@@ -243,211 +99,53 @@ $(document).ready(function() {
 
 <div id="report-lead" class="container-fluid">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Features Statistics</h2>
-      <p>The following graphs show passing and failing statistics for features</p>
+    <h2>Error</h2>
+      <p>Something went wrong with project CucumberTestNG022023, build 1</p>
   </div>
 </div>
-
-
-  <div class="container-fluid" id="charts">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div id="featureChartCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#featureChartCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#featureChartCarousel" data-slide-to="1"></li>
-            <li data-target="#featureChartCarousel" data-slide-to="2"></li>
-          </ol>
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <canvas id="features-chart" height="120"></canvas>
-            </div>
-
-            <div class="item">
-              <canvas id="scenarios-chart" height="120"></canvas>
-            </div>
-
-            <div class="item">
-              <canvas id="steps-chart" height="120"></canvas>
-            </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#featureChartCarousel" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#featureChartCarousel" role="button" data-slide="next">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br/>
-
 
 <div class="container-fluid" id="report">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-
-<table id="tablesorter" class="stats-table table-hover">
-
-<thead>
-  <tr class="header dont-sort">
-      <th></th>
-    <th colspan="6">Steps</th>
-    <th colspan="3">Scenarios</th>
-    <th colspan="2">Features</th>
-  </tr>
-  <tr>
-    <th>Feature</th>
-    <th class="passed">Passed</th>
-    <th class="failed">Failed</th>
-    <th class="skipped">Skipped</th>
-    <th class="pending">Pending</th>
-    <th class="undefined">Undefined</th>
-    <th class="total">Total</th>
-
-    <th class="passed">Passed</th>
-    <th class="failed">Failed</th>
-    <th class="total">Total</th>
-
-    <th>Duration</th>
-    <th>Status</th>
-  </tr>
-</thead>
-
-
-  <tbody>
-      <tr>
-        <td class="tagname"><a href="report-feature_2865515300.html">Add Product To Cart</a></td>
-
-        <td      class="passed"    >16</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td class="total">16</td>
-
-        <td  class="passed"    >2</td>
-        <td >0</td>
-        <td class="total">2</td>
-
-        <td class="duration" data-value="37496882000">37.496</td>
-        <td class="passed">Passed</td>
-      </tr>
-      <tr>
-        <td class="tagname"><a href="report-feature_1_965572540.html">Login</a></td>
-
-        <td      class="passed"    >17</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td class="total">17</td>
-
-        <td  class="passed"    >4</td>
-        <td >0</td>
-        <td class="total">4</td>
-
-        <td class="duration" data-value="35938065700">35.938</td>
-        <td class="passed">Passed</td>
-      </tr>
-      <tr>
-        <td class="tagname"><a href="report-feature_2_3714669217.html">Order</a></td>
-
-        <td      class="passed"    >63</td>
-        <td      class="failed"    >1</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td class="total">64</td>
-
-        <td  class="passed"    >7</td>
-        <td  class="failed"    >1</td>
-        <td class="total">8</td>
-
-        <td class="duration" data-value="133406046900">2:13.406</td>
-        <td class="failed">Failed</td>
-      </tr>
-      <tr>
-        <td class="tagname"><a href="report-feature_3_4196646110.html">Register</a></td>
-
-        <td      class="passed"    >23</td>
-        <td      class="failed"    >1</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td class="total">24</td>
-
-        <td  class="passed"    >5</td>
-        <td  class="failed"    >1</td>
-        <td class="total">6</td>
-
-        <td class="duration" data-value="49539965500">49.539</td>
-        <td class="failed">Failed</td>
-      </tr>
-      <tr>
-        <td class="tagname"><a href="report-feature_4_2075728867.html">Search</a></td>
-
-        <td      class="passed"    >4</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td >0</td>
-        <td class="total">4</td>
-
-        <td  class="passed"    >1</td>
-        <td >0</td>
-        <td class="total">1</td>
-
-        <td class="duration" data-value="13392492900">13.392</td>
-        <td class="passed">Passed</td>
-      </tr>
-  </tbody>
-
-  <tfoot class="total">
-    <tr>
-      <td></td>
-      <td>123</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>125</td>
-
-      <td>19</td>
-      <td>2</td>
-      <td>21</td>
-
-      <td class="duration">4:29.773</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>98.40%</td>
-      <td>1.60%</td>
-      <td>0.00%</td>
-      <td>0.00%</td>
-      <td>0.00%</td>
-      <td></td>
-      <td>90.48%</td>
-      <td>9.52%</td>
-      <td></td>
-      <td></td>
-      <td>60.00%</td>
-    </tr>
-  </tfoot>
-</table>
-
+      <div class="message">
+        <pre>net.masterthought.cucumber.ValidationException: No JSON report file was found!
+	at net.masterthought.cucumber.ReportParser.parseJsonFiles(ReportParser.java:61)
+	at net.masterthought.cucumber.ReportBuilder.generateReports(ReportBuilder.java:97)
+	at net.masterthought.cucumber.CucumberReportGeneratorMojo.execute(CucumberReportGeneratorMojo.java:236)
+	at org.apache.maven.plugin.DefaultBuildPluginManager.executeMojo(DefaultBuildPluginManager.java:137)
+	at org.apache.maven.lifecycle.internal.MojoExecutor.execute(MojoExecutor.java:210)
+	at org.apache.maven.lifecycle.internal.MojoExecutor.execute(MojoExecutor.java:156)
+	at org.apache.maven.lifecycle.internal.MojoExecutor.execute(MojoExecutor.java:148)
+	at org.apache.maven.lifecycle.internal.LifecycleModuleBuilder.buildProject(LifecycleModuleBuilder.java:117)
+	at org.apache.maven.lifecycle.internal.LifecycleModuleBuilder.buildProject(LifecycleModuleBuilder.java:81)
+	at org.apache.maven.lifecycle.internal.builder.singlethreaded.SingleThreadedBuilder.build(SingleThreadedBuilder.java:56)
+	at org.apache.maven.lifecycle.internal.LifecycleStarter.execute(LifecycleStarter.java:128)
+	at org.apache.maven.DefaultMaven.doExecute(DefaultMaven.java:305)
+	at org.apache.maven.DefaultMaven.doExecute(DefaultMaven.java:192)
+	at org.apache.maven.DefaultMaven.execute(DefaultMaven.java:105)
+	at org.apache.maven.cli.MavenCli.execute(MavenCli.java:957)
+	at org.apache.maven.cli.MavenCli.doMain(MavenCli.java:289)
+	at org.apache.maven.cli.MavenCli.main(MavenCli.java:193)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
+	at org.codehaus.plexus.classworlds.launcher.Launcher.launchEnhanced(Launcher.java:282)
+	at org.codehaus.plexus.classworlds.launcher.Launcher.launch(Launcher.java:225)
+	at org.codehaus.plexus.classworlds.launcher.Launcher.mainWithExitCode(Launcher.java:406)
+	at org.codehaus.plexus.classworlds.launcher.Launcher.main(Launcher.java:347)
+	at org.codehaus.classworlds.Launcher.main(Launcher.java:47)
+</pre>
+      </div>
+      <div>Trying to generate report from following files. Make sure they are valid cucumber report files:</div>
+      <div class="error-files">
+        <pre>
+        </pre>
+      </div>
     </div>
   </div>
 </div>
+
 
 <nav class="navbar navbar-default" id="footer">
   <div class="container-fluid">
