--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-tags.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-tags.html
@@ -48,32 +48,32 @@ $(document).ready(function() {
 $(document).ready(function() {
 
     var chartData = {
-        labels:  [ "@EmptyAddress",  "@EmptyEmail",  "@EmptyName",  "@EmptyPhone",  "@ErrorEmail",  "@ErrorFormatEmail",  "@ErrorFormatPhone",  "@ErrorName",  "@ErrorPassword",  "@ErrorPhone",  "@NameOver255Chars",  "@SuccessfulLogin",  "@SuccessfulOrder",  "@SuccessfulRegister",  "@UserDoesNotExist",  "@UserExist", ] ,
+        labels:  [ "@EmptyAddress",  "@EmptyEmail",  "@EmptyName",  "@EmptyPhone",  "@ErrorEmail",  "@ErrorFormatEmail",  "@ErrorFormatPhone",  "@ErrorName",  "@ErrorPassword",  "@ErrorPhone",  "@NameOver255Chars",  "@SuccessfulLogin",  "@SuccessfulOrder",  "@SuccessfulOrder2",  "@SuccessfulRegister",  "@UserDoesNotExist",  "@UserExist", ] ,
         datasets: [
             {
                 label: "Passed",
                 backgroundColor: "#92DD96",
-                data:  [ 100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  75.00,  100.00,  100.00,  75.00,  100.00,  100.00, ] 
+                data:  [ 100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  75.00,  100.00,  100.00,  100.00,  75.00,  100.00,  100.00, ] 
             },
             {
                 label: "Failed",
                 backgroundColor: "#F2928C",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00,  25.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00, ] 
             },
             {
                 label: "Skipped",
                 backgroundColor: "#8AF",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
             },
             {
                 label: "Pending",
                 backgroundColor: "#F5F28F",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
             },
             {
                 label: "Undefined",
                 backgroundColor: "#F5B975",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
             }
         ]
     };
@@ -135,7 +135,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>CucumberTestNG022023</td>
         <td>1</td>
-      <td>16 Oct 2023, 20:41</td>
+      <td>17 Oct 2023, 22:27</td>
     </tr>
   </tbody>
 </table>
@@ -210,7 +210,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4136016300">4.136</td>
+        <td class="duration" data-value="4140001100">4.140</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -227,7 +227,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4120226700">4.120</td>
+        <td class="duration" data-value="4157659800">4.157</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -244,7 +244,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4127105500">4.127</td>
+        <td class="duration" data-value="4135122500">4.135</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -261,7 +261,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4132179300">4.132</td>
+        <td class="duration" data-value="4137909700">4.137</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -278,7 +278,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="15409026500">15.409</td>
+        <td class="duration" data-value="15551673800">15.551</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -295,7 +295,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4137318700">4.137</td>
+        <td class="duration" data-value="4117843900">4.117</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -312,7 +312,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4167886700">4.167</td>
+        <td class="duration" data-value="4148188700">4.148</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -329,7 +329,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="9155142100">9.155</td>
+        <td class="duration" data-value="9155492900">9.155</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -346,7 +346,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="16402981800">16.402</td>
+        <td class="duration" data-value="15780089800">15.780</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -363,7 +363,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="7955848800">7.955</td>
+        <td class="duration" data-value="8498305200">8.498</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -380,7 +380,7 @@ $(document).ready(function() {
         <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4249164000">4.249</td>
+        <td class="duration" data-value="4234097400">4.234</td>
         <td class="failed">Failed</td>
       </tr>
       <tr>
@@ -397,11 +397,28 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="13009779400">13.009</td>
+        <td class="duration" data-value="34345920300">34.345</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-tag_3675761779.html">@SuccessfulOrder</a></td>
+
+        <td      class="passed"    >8</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">8</td>
+
+        <td  class="passed"    >2</td>
+        <td >0</td>
+        <td class="total">2</td>
+
+        <td class="duration" data-value="17039185500">17.039</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_2279465533.html">@SuccessfulOrder2</a></td>
 
         <td      class="passed"    >4</td>
         <td >0</td>
@@ -414,7 +431,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="8440084000">8.440</td>
+        <td class="duration" data-value="12594684900">12.594</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -431,7 +448,7 @@ $(document).ready(function() {
         <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="8123789500">8.123</td>
+        <td class="duration" data-value="8094731300">8.094</td>
         <td class="failed">Failed</td>
       </tr>
       <tr>
@@ -448,7 +465,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="7319010700">7.319</td>
+        <td class="duration" data-value="7804395300">7.804</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -465,7 +482,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="8102452400">8.102</td>
+        <td class="duration" data-value="7928371700">7.928</td>
         <td class="passed">Passed</td>
       </tr>
   </tbody>
@@ -473,33 +490,33 @@ $(document).ready(function() {
   <tfoot class="total">
     <tr>
       <td></td>
-      <td>71</td>
+      <td>79</td>
       <td>2</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>73</td>
+      <td>81</td>
 
-      <td>16</td>
-      <td>2</td>
       <td>18</td>
+      <td>2</td>
+      <td>20</td>
 
-      <td class="duration">2:2.988</td>
-      <td>16</td>
+      <td class="duration">2:45.863</td>
+      <td>17</td>
     </tr>
     <tr>
       <td></td>
-      <td>97.26%</td>
-      <td>2.74%</td>
+      <td>97.53%</td>
+      <td>2.47%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>88.89%</td>
-      <td>11.11%</td>
+      <td>90.00%</td>
+      <td>10.00%</td>
       <td></td>
       <td></td>
-      <td>60.00%</td>
+      <td>71.43%</td>
     </tr>
   </tfoot>
 </table>
