--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_6_2075728867.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_6_2075728867.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Tag: @SuccessfulLogin</title>
+<title>Cucumber Reports (no 1) - Feature: Search</title>
 
 </head>
 <body>
@@ -89,7 +89,7 @@ $(document).ready(function() {
 
 <div id="report-lead" class="container-fluid">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Tag Report</h2>
+    <h2>Feature Report</h2>
   </div>
 </div>
 
@@ -108,7 +108,7 @@ $(document).ready(function() {
     <th colspan="2">Features</th>
   </tr>
   <tr>
-    <th>Tag</th>
+    <th>Feature</th>
     <th class="passed">Passed</th>
     <th class="failed">Failed</th>
     <th class="skipped">Skipped</th>
@@ -128,19 +128,19 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">@SuccessfulLogin</td>
-          <td      class="passed"    >5</td>
+          <td class="tagname">Search</td>
+          <td      class="passed"    >4</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
-          <td class="total">5</td>
+          <td class="total">4</td>
 
           <td  class="passed"    >1</td>
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="34345920300">34.345</td>
+          <td class="duration" data-value="49918868200">49.918</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -167,30 +167,38 @@ $(document).ready(function() {
 <div class="container-fluid" id="report">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <div class="elements">
-
-
-<div class="element">
-    <div class="indention">
-      <b>Feature:</b>
-      <a href="report-feature_1_965572540.html">Login</a>
-    </div>
-
+      <div class="feature">
 
 <div class="tags indention">
-    <b>Tags:</b>
-       <a href="report-tag_3672904846.html">@SuccessfulLogin</a>
 </div>
 
 
-  <span class="lead-duration duration">34.345</span>
+<div class="brief passed">
+  <span class="keyword indention">Feature</span>
+  <span class="name">Search</span>
+
+
+</div>
+
+        <div class="description indention"></div>
+
+        <div class="elements inner-level">
+
+<div class="element">
+
+
+<div class="tags indention">
+</div>
+
+
+  <span class="lead-duration duration">49.918</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
   <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Successful Login</span>
+  <span class="name">Search Products</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -256,9 +264,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Given passed">
   <span class="keyword indention">Given</span>
-  <span class="name">user navigate to Login page <span class="argument">&quot;http://localhost:5173/login&quot;</span></span>
+  <span class="name">user redirect to index page <span class="argument">&quot;http://localhost:5173/index/products&quot;</span></span>
 
-  <span class="lead-duration duration">5.296</span>
+  <span class="lead-duration duration">47.776</span>
 
 </div>
 
@@ -347,9 +355,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-When passed">
   <span class="keyword indention">When</span>
-  <span class="name">user enter email <span class="argument">&quot;thang@gmail.com&quot;</span> and password: <span class="argument">&quot;thang123&quot;</span></span>
+  <span class="name">user enter search value: <span class="argument">&quot;&#272;i&#7879;n tr&#7903;&quot;</span></span>
 
-  <span class="lead-duration duration">1.084</span>
+  <span class="lead-duration duration">0.046</span>
 
 </div>
 
@@ -438,9 +446,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-And passed">
   <span class="keyword indention">And</span>
-  <span class="name">click login button</span>
+  <span class="name">click search button</span>
 
-  <span class="lead-duration duration">1.030</span>
+  <span class="lead-duration duration">1.027</span>
 
 </div>
 
@@ -529,9 +537,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Then passed">
   <span class="keyword indention">Then</span>
-  <span class="name">user redirect to index page <span class="argument">&quot;http://localhost:5173/index/products&quot;</span></span>
+  <span class="name">user should see list products with name include <span class="argument">&quot;&#272;i&#7879;n tr&#7903;&quot;</span></span>
 
-  <span class="lead-duration duration">25.900</span>
+  <span class="lead-duration duration">1.067</span>
 
 </div>
 
@@ -615,97 +623,6 @@ $(document).ready(function() {
   </div>
 
       </div>
-      <div class="step">
-
-
-<div class="brief step-name-And passed">
-  <span class="keyword indention">And</span>
-  <span class="name">user click logout button</span>
-
-  <span class="lead-duration duration">1.033</span>
-
-</div>
-
-
-
-  <div class="inner-level hooks-step-before">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#before-12">
-
-<div class="brief passed">
-  <span class="keyword indention">Hooks</span>
-  <span class="name"></span>
-
-
-     <i class="chevron fa fa-fw"></i>
-</div>
-
-    </div>
-
-    <div id="before-12" class="inner-level collapse collapsable-details ">
-        <div class="hook">
-          <div class="brief passed">
-            <span class="keyword indention">Before</span>
-              <span class="location name">hooks.CucumberHooks.beforeStep(io.cucumber.java.Scenario)</span>
-
-  <span class="lead-duration duration">0.000</span>
-
-          </div>
-
-
-
-
-
-
-
-        </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="inner-level hooks-step-after">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-13">
-
-<div class="brief passed">
-  <span class="keyword indention">Hooks</span>
-  <span class="name"></span>
-
-
-     <i class="chevron fa fa-fw"></i>
-</div>
-
-    </div>
-
-    <div id="after-13" class="inner-level collapse collapsable-details ">
-        <div class="hook">
-          <div class="brief passed">
-            <span class="keyword indention">After</span>
-              <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
-
-  <span class="lead-duration duration">0.000</span>
-
-          </div>
-
-
-
-
-
-
-
-        </div>
-    </div>
-  </div>
-
-      </div>
   </div>
 </div>
 
@@ -713,7 +630,7 @@ $(document).ready(function() {
 
 
   <div class="inner-level hooks-element-after">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-14">
+    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-12">
 
 <div class="brief passed">
   <span class="keyword indention">Hooks</span>
@@ -725,13 +642,13 @@ $(document).ready(function() {
 
     </div>
 
-    <div id="after-14" class="inner-level collapse collapsable-details ">
+    <div id="after-12" class="inner-level collapse collapsable-details ">
         <div class="hook">
           <div class="brief passed">
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.467</span>
+  <span class="lead-duration duration">2.624</span>
 
           </div>
 
@@ -748,6 +665,7 @@ $(document).ready(function() {
   </div>
 </div>
 
+        </div>
 
       </div>
     </div>
