--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_8_4196646110.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_8_4196646110.html
@@ -74,9 +74,9 @@ $(document).ready(function() {
   </thead>
   <tbody>
     <tr class="info">
-      <td>CucumberTestNG022023</td>
+      <td>TMDT</td>
         <td>1</td>
-      <td>25 Oct 2023, 20:32</td>
+      <td>25 Oct 2023, 21:57</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td  class="failed"    >1</td>
           <td class="total">6</td>
 
-          <td class="duration" data-value="71411039200">1:11.411</td>
+          <td class="duration" data-value="49919141600">49.919</td>
           <td class="failed">Failed</td>
         </tr>
         </tbody>
@@ -193,7 +193,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">27.080</span>
+  <span class="lead-duration duration">9.721</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -268,7 +268,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">24.815</span>
+  <span class="lead-duration duration">7.413</span>
 
 </div>
 
@@ -337,7 +337,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -359,7 +359,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.156</span>
+  <span class="lead-duration duration">0.210</span>
 
 </div>
 
@@ -450,7 +450,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.066</span>
+  <span class="lead-duration duration">2.057</span>
 
 </div>
 
@@ -541,7 +541,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error name message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n h&#7885; v&agrave; t&ecirc;n t&#7889;i &#273;a 255 k&yacute; t&#7921;&quot;</span></span>
 
-  <span class="lead-duration duration">0.041</span>
+  <span class="lead-duration duration">0.039</span>
 
 </div>
 
@@ -610,7 +610,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -650,7 +650,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.160</span>
+  <span class="lead-duration duration">3.081</span>
 
           </div>
 
@@ -677,7 +677,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">10.303</span>
+  <span class="lead-duration duration">8.120</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-13">
@@ -752,7 +752,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">8.020</span>
+  <span class="lead-duration duration">5.890</span>
 
 </div>
 
@@ -843,7 +843,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.192</span>
+  <span class="lead-duration duration">0.129</span>
 
 </div>
 
@@ -934,7 +934,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.045</span>
+  <span class="lead-duration duration">2.052</span>
 
 </div>
 
@@ -1025,7 +1025,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error phone message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n s&#7889; &#273;i&#7879;n tho&#7841;i &#273;&uacute;ng &#273;&#7883;nh d&#7841;ng&quot;</span></span>
 
-  <span class="lead-duration duration">0.045</span>
+  <span class="lead-duration duration">0.047</span>
 
 </div>
 
@@ -1134,7 +1134,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.082</span>
+  <span class="lead-duration duration">2.983</span>
 
           </div>
 
@@ -1161,7 +1161,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">9.861</span>
+  <span class="lead-duration duration">7.983</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-25">
@@ -1236,7 +1236,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">7.622</span>
+  <span class="lead-duration duration">5.755</span>
 
 </div>
 
@@ -1327,7 +1327,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.127</span>
+  <span class="lead-duration duration">0.128</span>
 
 </div>
 
@@ -1418,7 +1418,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.056</span>
+  <span class="lead-duration duration">2.067</span>
 
 </div>
 
@@ -1509,7 +1509,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error email message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n email &#273;&uacute;ng &#273;&#7883;nh d&#7841;ng&quot;</span></span>
 
-  <span class="lead-duration duration">0.055</span>
+  <span class="lead-duration duration">0.032</span>
 
 </div>
 
@@ -1618,7 +1618,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.098</span>
+  <span class="lead-duration duration">1.076</span>
 
           </div>
 
@@ -1645,7 +1645,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">8.239</span>
+  <span class="lead-duration duration">8.036</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-37">
@@ -1720,7 +1720,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">6.024</span>
+  <span class="lead-duration duration">5.812</span>
 
 </div>
 
@@ -1811,7 +1811,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;&quot;</span></span>
 
-  <span class="lead-duration duration">0.134</span>
+  <span class="lead-duration duration">0.139</span>
 
 </div>
 
@@ -1902,7 +1902,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.042</span>
+  <span class="lead-duration duration">2.047</span>
 
 </div>
 
@@ -1993,7 +1993,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error password message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n m&#7853;t kh&#7849;u t&#7889;i &#273;a 255 k&yacute; t&#7921;&quot;</span></span>
 
-  <span class="lead-duration duration">0.037</span>
+  <span class="lead-duration duration">0.036</span>
 
 </div>
 
@@ -2062,7 +2062,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -2102,7 +2102,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.117</span>
+  <span class="lead-duration duration">2.988</span>
 
           </div>
 
@@ -2129,7 +2129,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">7.996</span>
+  <span class="lead-duration duration">8.044</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-49">
@@ -2204,7 +2204,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">5.755</span>
+  <span class="lead-duration duration">5.822</span>
 
 </div>
 
@@ -2295,7 +2295,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Le Minh Thang&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;thang@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.175</span>
+  <span class="lead-duration duration">0.142</span>
 
 </div>
 
@@ -2386,7 +2386,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.033</span>
+  <span class="lead-duration duration">2.040</span>
 
 </div>
 
@@ -2455,7 +2455,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -2477,7 +2477,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error register message <span class="argument">&quot;Email &#273;&atilde; &#273;&#432;&#7907;c &#273;&#259;ng k&yacute; tr&#432;&#7899;c &#273;&oacute; !&quot;</span></span>
 
-  <span class="lead-duration duration">0.031</span>
+  <span class="lead-duration duration">0.038</span>
 
 </div>
 
@@ -2586,7 +2586,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.047</span>
+  <span class="lead-duration duration">1.033</span>
 
           </div>
 
@@ -2613,7 +2613,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">7.929</span>
+  <span class="lead-duration duration">8.013</span>
 
 
   <span data-toggle="collapse" class=" collapsable-control" data-target="#element-61">
@@ -2688,7 +2688,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">5.718</span>
+  <span class="lead-duration duration">5.830</span>
 
 </div>
 
@@ -2713,7 +2713,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">hooks.CucumberHooks.beforeStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -2779,7 +2779,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.139</span>
+  <span class="lead-duration duration">0.137</span>
 
 </div>
 
@@ -2870,7 +2870,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.026</span>
+  <span class="lead-duration duration">2.033</span>
 
 </div>
 
@@ -2961,7 +2961,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an success message <span class="argument">&quot;&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
-  <span class="lead-duration duration">0.045</span>
+  <span class="lead-duration duration">0.012</span>
 
 </div>
 
@@ -3013,9 +3013,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.12.1', revision: '8e34639b11'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '15.0.2'
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [e3dde86b-85e2-4aec-a705-9a4e594292fb, findElement {using=xpath, value=//span[contains(text(),'&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !')]}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:9630, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 14048, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:9630/devtool..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: e3dde86b-85e2-4aec-a705-9a4e594292fb
+Command: [7c0e6a66-399a-4fc8-a359-1dc6de425a64, findElement {using=xpath, value=//span[contains(text(),'&#272;&#259;ng k&yacute; th&agrave;nh c&ocirc;ng !')]}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.2, moz:accessibilityChecks: false, moz:buildID: 20231009140911, moz:debuggerAddress: 127.0.0.1:35685, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 15724, moz:profile: C:\Users\Thuan\AppData\Loca..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:35685/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Session ID: 7c0e6a66-399a-4fc8-a359-1dc6de425a64
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:64)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -3110,7 +3110,7 @@ Session ID: e3dde86b-85e2-4aec-a705-9a4e594292fb
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.006</span>
+  <span class="lead-duration duration">3.293</span>
 
           </div>
 
