--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_141217891.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_141217891.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Tag: @SuccessfulOrder2</title>
+<title>Cucumber Reports (no 1) - Tag: @DeleteProduct</title>
 
 </head>
 <body>
@@ -128,7 +128,7 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">@SuccessfulOrder2</td>
+          <td class="tagname">@DeleteProduct</td>
           <td >0</td>
           <td >0</td>
           <td     class="skipped"   >4</td>
@@ -173,13 +173,13 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_7_520669101.html">Fow Order 2</a>
+      <a href="report-feature_2_2637572631.html">Admin Add New Product</a>
     </div>
 
 
 <div class="tags indention">
     <b>Tags:</b>
-       <a href="report-tag_2279465533.html">@SuccessfulOrder2</a>
+       <a href="report-tag_141217891.html">@DeleteProduct</a>
 </div>
 
 
@@ -189,8 +189,8 @@ $(document).ready(function() {
   <span data-toggle="collapse" class=" collapsable-control" data-target="#element-1">
 
 <div class="brief failed">
-  <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Successful Fow Order 2</span>
+  <span class="keyword indention">Scenario</span>
+  <span class="name">Delete Product</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -256,7 +256,7 @@ $(document).ready(function() {
 
 <div class="brief step-name-Given skipped">
   <span class="keyword indention">Given</span>
-  <span class="name">select product <span class="argument">&quot;&#273;&#7891;ng h&#7891;&quot;</span> to order</span>
+  <span class="name">user stay at products page</span>
 
   <span class="lead-duration duration">0.000</span>
 
@@ -347,7 +347,7 @@ $(document).ready(function() {
 
 <div class="brief step-name-When skipped">
   <span class="keyword indention">When</span>
-  <span class="name">user input address is <span class="argument">&quot;S&#7889; nh&agrave; 32&quot;</span>, <span class="argument">&quot;Th&agrave;nh ph&#7889; C&#7847;n Th&#417;&quot;</span>, <span class="argument">&quot;Qu&#7853;n Ninh Ki&#7873;u&quot;</span>, <span class="argument">&quot;Ph&#432;&#7901;ng An H&ograve;a&quot;</span>, <span class="argument">&quot;Cho ki&#7875;m tra h&agrave;ng&quot;</span></span>
+  <span class="name">user click delete product button with product name is <span class="argument">&quot;T&#7909; d&aacute;n SMD&quot;</span></span>
 
   <span class="lead-duration duration">0.000</span>
 
@@ -438,7 +438,7 @@ $(document).ready(function() {
 
 <div class="brief step-name-And skipped">
   <span class="keyword indention">And</span>
-  <span class="name">click submit button</span>
+  <span class="name">user press Accept Alert to confirm deletion</span>
 
   <span class="lead-duration duration">0.000</span>
 
@@ -529,7 +529,7 @@ $(document).ready(function() {
 
 <div class="brief step-name-Then skipped">
   <span class="keyword indention">Then</span>
-  <span class="name">user should see an order success message <span class="argument">&quot;&#272;&#7863;t h&agrave;ng th&agrave;nh c&ocirc;ng&quot;</span></span>
+  <span class="name">user should see an success delete message <span class="argument">&quot;X&oacute;a th&agrave;nh c&ocirc;ng !&quot;</span></span>
 
   <span class="lead-duration duration">0.000</span>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">3.120</span>
+  <span class="lead-duration duration">3.047</span>
 
           </div>
 
