--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-tags.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-tags.html
@@ -48,32 +48,32 @@ $(document).ready(function() {
 $(document).ready(function() {
 
     var chartData = {
-        labels:  [ "@EmptyAddress",  "@EmptyEmail",  "@EmptyName",  "@EmptyPhone",  "@ErrorEmail",  "@ErrorFormatEmail",  "@ErrorFormatPhone",  "@ErrorName",  "@ErrorPassword",  "@ErrorPhone",  "@NameOver255Chars",  "@SuccessfulLogin",  "@SuccessfulOrder",  "@SuccessfulOrder2",  "@SuccessfulRegister",  "@UserDoesNotExist",  "@UserExist", ] ,
+        labels:  [ "@ChangeProductImage",  "@DeleteProduct",  "@EmptyAddress",  "@EmptyEmail",  "@EmptyName",  "@EmptyPhone",  "@EmptyProductCategory",  "@EmptyProductDateOfManufacture",  "@EmptyProductImage",  "@EmptyProductName",  "@EmptyProductPrice",  "@EmptyProductQuantity",  "@ErrorEmail",  "@ErrorFormatEmail",  "@ErrorFormatPhone",  "@ErrorName",  "@ErrorPassword",  "@ErrorPhone",  "@NameOver255Chars",  "@ProductNameOver255Characters",  "@SuccessfulAddNewProduct",  "@SuccessfulLogin",  "@SuccessfulOrder",  "@SuccessfulOrder2",  "@SuccessfulRegister",  "@UserDoesNotExist",  "@UserExist", ] ,
         datasets: [
             {
                 label: "Passed",
                 backgroundColor: "#92DD96",
-                data:  [ 100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  75.00,  100.00,  100.00,  100.00,  75.00,  100.00,  100.00, ] 
+                data:  [ 0.00,  0.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  100.00,  75.00,  75.00,  25.00,  100.00,  50.00,  0.00,  75.00,  100.00,  100.00, ] 
             },
             {
                 label: "Failed",
                 backgroundColor: "#F2928C",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  25.00,  25.00,  25.00,  0.00,  0.00,  0.00,  25.00,  0.00,  0.00, ] 
             },
             {
                 label: "Skipped",
                 backgroundColor: "#8AF",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 100.00,  100.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  50.00,  0.00,  50.00,  100.00,  0.00,  0.00,  0.00, ] 
             },
             {
                 label: "Pending",
                 backgroundColor: "#F5F28F",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
             },
             {
                 label: "Undefined",
                 backgroundColor: "#F5B975",
-                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
+                data:  [ 0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00,  0.00, ] 
             }
         ]
     };
@@ -133,9 +133,9 @@ $(document).ready(function() {
   </thead>
   <tbody>
     <tr class="info">
-      <td>CucumberTestNG022023</td>
+      <td>TMDT</td>
         <td>1</td>
-      <td>17 Oct 2023, 22:27</td>
+      <td>25 Oct 2023, 21:57</td>
     </tr>
   </tbody>
 </table>
@@ -197,6 +197,40 @@ $(document).ready(function() {
 
   <tbody>
       <tr>
+        <td class="tagname"><a href="report-tag_1968059867.html">@ChangeProductImage</a></td>
+
+        <td >0</td>
+        <td >0</td>
+        <td     class="skipped"   >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td >0</td>
+        <td  class="failed"    >1</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="0">0.000</td>
+        <td class="failed">Failed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_141217891.html">@DeleteProduct</a></td>
+
+        <td >0</td>
+        <td >0</td>
+        <td     class="skipped"   >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td >0</td>
+        <td  class="failed"    >1</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="0">0.000</td>
+        <td class="failed">Failed</td>
+      </tr>
+      <tr>
         <td class="tagname"><a href="report-tag_3764748870.html">@EmptyAddress</a></td>
 
         <td      class="passed"    >4</td>
@@ -210,7 +244,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4140001100">4.140</td>
+        <td class="duration" data-value="4152141800">4.152</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -227,7 +261,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4157659800">4.157</td>
+        <td class="duration" data-value="4136963600">4.136</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -244,7 +278,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4135122500">4.135</td>
+        <td class="duration" data-value="4142358100">4.142</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -261,7 +295,109 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4137909700">4.137</td>
+        <td class="duration" data-value="4117825600">4.117</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_2709156447.html">@EmptyProductCategory</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="2795380700">2.795</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_3911104057.html">@EmptyProductDateOfManufacture</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="3286269700">3.286</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_382975800.html">@EmptyProductImage</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="2183960600">2.183</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_1259417836.html">@EmptyProductName</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="2742203900">2.742</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_389596966.html">@EmptyProductPrice</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="3011911700">3.011</td>
+        <td class="passed">Passed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_1373641196.html">@EmptyProductQuantity</a></td>
+
+        <td      class="passed"    >4</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td  class="passed"    >1</td>
+        <td >0</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="2993018200">2.993</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -278,7 +414,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="15551673800">15.551</td>
+        <td class="duration" data-value="15642820200">15.642</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -295,7 +431,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4117843900">4.117</td>
+        <td class="duration" data-value="4131544300">4.131</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -312,7 +448,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4148188700">4.148</td>
+        <td class="duration" data-value="4163173400">4.163</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -329,7 +465,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="9155492900">9.155</td>
+        <td class="duration" data-value="9721544800">9.721</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -346,7 +482,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="15780089800">15.780</td>
+        <td class="duration" data-value="15381279700">15.381</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -363,7 +499,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="8498305200">8.498</td>
+        <td class="duration" data-value="8120040900">8.120</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -380,7 +516,41 @@ $(document).ready(function() {
         <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="4234097400">4.234</td>
+        <td class="duration" data-value="4238100600">4.238</td>
+        <td class="failed">Failed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_1069778285.html">@ProductNameOver255Characters</a></td>
+
+        <td      class="passed"    >3</td>
+        <td      class="failed"    >1</td>
+        <td >0</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td >0</td>
+        <td  class="failed"    >1</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="2768890500">2.768</td>
+        <td class="failed">Failed</td>
+      </tr>
+      <tr>
+        <td class="tagname"><a href="report-tag_2804680149.html">@SuccessfulAddNewProduct</a></td>
+
+        <td      class="passed"    >1</td>
+        <td      class="failed"    >1</td>
+        <td     class="skipped"   >2</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">4</td>
+
+        <td >0</td>
+        <td  class="failed"    >1</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="38091543500">38.091</td>
         <td class="failed">Failed</td>
       </tr>
       <tr>
@@ -397,42 +567,42 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="34345920300">34.345</td>
+        <td class="duration" data-value="14128301600">14.128</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-tag_3675761779.html">@SuccessfulOrder</a></td>
 
-        <td      class="passed"    >8</td>
+        <td      class="passed"    >4</td>
         <td >0</td>
-        <td >0</td>
+        <td     class="skipped"   >4</td>
         <td >0</td>
         <td >0</td>
         <td class="total">8</td>
 
-        <td  class="passed"    >2</td>
-        <td >0</td>
+        <td  class="passed"    >1</td>
+        <td  class="failed"    >1</td>
         <td class="total">2</td>
 
-        <td class="duration" data-value="17039185500">17.039</td>
-        <td class="passed">Passed</td>
+        <td class="duration" data-value="8548203100">8.548</td>
+        <td class="failed">Failed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-tag_2279465533.html">@SuccessfulOrder2</a></td>
 
-        <td      class="passed"    >4</td>
         <td >0</td>
         <td >0</td>
+        <td     class="skipped"   >4</td>
         <td >0</td>
         <td >0</td>
         <td class="total">4</td>
 
-        <td  class="passed"    >1</td>
         <td >0</td>
+        <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="12594684900">12.594</td>
-        <td class="passed">Passed</td>
+        <td class="duration" data-value="0">0.000</td>
+        <td class="failed">Failed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-tag_2503552956.html">@SuccessfulRegister</a></td>
@@ -448,7 +618,7 @@ $(document).ready(function() {
         <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="8094731300">8.094</td>
+        <td class="duration" data-value="8013473900">8.013</td>
         <td class="failed">Failed</td>
       </tr>
       <tr>
@@ -465,7 +635,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="7804395300">7.804</td>
+        <td class="duration" data-value="7487600300">7.487</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -482,7 +652,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="7928371700">7.928</td>
+        <td class="duration" data-value="8044040200">8.044</td>
         <td class="passed">Passed</td>
       </tr>
   </tbody>
@@ -490,33 +660,33 @@ $(document).ready(function() {
   <tfoot class="total">
     <tr>
       <td></td>
-      <td>79</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>81</td>
-
+      <td>99</td>
+      <td>4</td>
       <td>18</td>
-      <td>2</td>
-      <td>20</td>
+      <td>0</td>
+      <td>0</td>
+      <td>121</td>
 
-      <td class="duration">2:45.863</td>
-      <td>17</td>
+      <td>22</td>
+      <td>8</td>
+      <td>30</td>
+
+      <td class="duration">3:2.042</td>
+      <td>27</td>
     </tr>
     <tr>
       <td></td>
-      <td>97.53%</td>
-      <td>2.47%</td>
-      <td>0.00%</td>
+      <td>81.82%</td>
+      <td>3.31%</td>
+      <td>14.88%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>90.00%</td>
-      <td>10.00%</td>
+      <td>73.33%</td>
+      <td>26.67%</td>
       <td></td>
       <td></td>
-      <td>71.43%</td>
+      <td>30.00%</td>
     </tr>
   </tfoot>
 </table>
